; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_fan.c_nouveau_therm_fan_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_fan.c_nouveau_therm_fan_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_therm = type { i32 }
%struct.nouveau_therm_priv = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nouveau_therm_fan_set(%struct.nouveau_therm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nouveau_therm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.nouveau_therm_priv*, align 8
  store %struct.nouveau_therm* %0, %struct.nouveau_therm** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nouveau_therm*, %struct.nouveau_therm** %4, align 8
  %9 = bitcast %struct.nouveau_therm* %8 to i8*
  %10 = bitcast i8* %9 to %struct.nouveau_therm_priv*
  store %struct.nouveau_therm_priv* %10, %struct.nouveau_therm_priv** %7, align 8
  %11 = load %struct.nouveau_therm_priv*, %struct.nouveau_therm_priv** %7, align 8
  %12 = getelementptr inbounds %struct.nouveau_therm_priv, %struct.nouveau_therm_priv* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @nouveau_fan_update(i32 %13, i32 %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @nouveau_fan_update(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
